--- a/templates/front_end/emails/base.html.twig
+++ b/templates/front_end/emails/base.html.twig
@@ -20,7 +20,7 @@
     <body>
     	<table width="100%" cellspacing="0" cellpadding="0">
     		<tr>
-                <td><img src="{{ absolute_url(asset('backend/images/logo-visa-en-ligne.jpg')) }}"></td>
+                <td><img src="{{ absolute_url(asset('backend/images/logo-visa-en-ligne.png')) }}"></td>
     		</tr>
     		<tr>
     			<td>
