--- a/templates/back_end/base.html.twig
+++ b/templates/back_end/base.html.twig
@@ -11,6 +11,7 @@
             <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:500|Open+Sans+Condensed:300|Open+Sans:300,600|Roboto+Condensed:300,400,700|Roboto:100&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet"> 
             <link href="{{ asset('/backend/css/main.css') }}" rel="stylesheet">
+            <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
             <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.15.5/dist/bootstrap-table.min.css">
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
             <script src="https://kit.fontawesome.com/d4578f32e0.js" crossorigin="anonymous"></script>
@@ -18,7 +19,7 @@
             <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
             <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
+            <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
             
         {% endblock %}
 
