--- a/templates/back_end/emails/demande_visa_classic/rappel_demande.html.twig
+++ b/templates/back_end/emails/demande_visa_classic/rappel_demande.html.twig
@@ -8,12 +8,14 @@
 					Bonjour {{ client.nom }} {{ client.prenom }},
 				</p>
 				<p>
-					Vous avez formulé une demande en ligne {{ demande.reference }} pour l'obtention d'un Evisa pour le pays : <strong>{{ demande.visaType.visaClassic.pays.titre }}</strong>.
+					Vous avez formulé une demande en ligne {{ demande.reference }} pour l'obtention d'un {% if demande.visaType.visaClassic %}visa classic {% else %}
+					Evisa {% endif %}
+					  pour le pays : <strong>{{ demande.visaType.visaClassic.pays.titre }}</strong>.
 				</p>
 				<p>
 					Il semblerait toutefois que vous n'ayez pas envoyer votre dossier.
 				<p>
-					L'équipe de Evisa Application vous remercie de votre confiance et vous souhaite une agréable journée.
+					L'équipe EURO VISA SERVICE vous remercie de votre confiance et vous souhaite une agréable journée.
 				</p>
 				<p>
 					<strong>Visa-en-ligne.com</strong>
