--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,8 @@
             <link rel="stylesheet" type="text/css" href="{{ asset('/frontend/css/menu-front.css') }}">
             <link rel="stylesheet" type="text/css" href="{{ asset('/frontend/css/owl.theme.default.css') }}">
             <link rel="stylesheet" type="text/css" href="{{ asset('/frontend/css/owl.carousel.css') }}">
+            <script src="{{ asset('bundles/fosjsrouting/js/router.min.js') }}"></script>
+            <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>
             {# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> #}
 
         {% endblock %}
