--- a/templates/front_end/paiement/monetico.html.twig
+++ b/templates/front_end/paiement/monetico.html.twig
@@ -4,12 +4,11 @@
 {% block body %}
 	<div>
 		<br>
-    	<h5 class="font-weight-bold">Procédez au règlement de votre commande</h5>
+    	<h5 class="font-weight-bold text-center">Procédez au règlement de votre commande</h5>
     </div>
     <div class="row">
     	<div class="col-sm-12">
     		<form action="{{action}}" method="post" id="PaymentRequest">
-				<p>
 					<input type="hidden" name="version"             id="version"           value="{{form.version}}" />
 					<input type="hidden" name="TPE"                 id="TPE"               value="{{form.TPE}}" />
 					<input type="hidden" name="date"                id="date"              value="{{form.date}}" />
@@ -23,17 +22,16 @@
 					<input type="hidden" name="texte-libre"         id="texte-libre"       value="{{form.textelibre}}" />
 					<input type="hidden" name="mail"                id="mail"              value="{{form.mail}}" />
 
-					{# <input type="hidden" name="nbrech"              id="nbrech"         value="<?php echo $sNbrEch;?>" />
-					<input type="hidden" name="dateech1"            id="dateech1"       value="<?php echo $sDateEcheance1;?>" />
-					<input type="hidden" name="montantech1"         id="montantech1"    value="<?php echo $sMontantEcheance1;?>" />
-					<input type="hidden" name="dateech2"            id="dateech2"       value="<?php echo $sDateEcheance2;?>" />
-					<input type="hidden" name="montantech2"         id="montantech2"    value="<?php echo $sMontantEcheance2;?>" />
-					<input type="hidden" name="dateech3"            id="dateech3"       value="<?php echo $sDateEcheance3;?>" />
-					<input type="hidden" name="montantech3"         id="montantech3"    value="<?php echo $sMontantEcheance3;?>" />
-					<input type="hidden" name="dateech4"            id="dateech4"       value="<?php echo $sDateEcheance4;?>" />
-					<input type="hidden" name="montantech4"         id="montantech4"    value="<?php echo $sMontantEcheance4;?>" /> #}
-					<input type="submit" name="bouton"              id="bouton"         value="Connexion / Connection" />
-				</p>
+					<input type="hidden" name="nbrech"              id="nbrech"         value="" />
+					<input type="hidden" name="dateech1"            id="dateech1"       value="" />
+					<input type="hidden" name="montantech1"         id="montantech1"    value="" />
+					<input type="hidden" name="dateech2"            id="dateech2"       value="" />
+					<input type="hidden" name="montantech2"         id="montantech2"    value="" />
+					<input type="hidden" name="dateech3"            id="dateech3"       value="" />
+					<input type="hidden" name="montantech3"         id="montantech3"    value="" />
+					<input type="hidden" name="dateech4"            id="dateech4"       value="" />
+					<input type="hidden" name="montantech4"         id="montantech4"    value="" />
+					<input type="submit" name="bouton"              id="bouton"         value="Payer ma commande" class="form-control" />
 				</form>
     	</div>
     </div>
